# nyancat

./: .gitignore  Cargo.toml  README.md  copy_bin.sh  run.sh
src/: main.rs
