[package]
name = "nyancat"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
colored = "3"

# credit to Zak Holliman for writing default arm of the match statement!
